--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rasenmaeher</title>
+    <title id="deployment-title"></title>
+    <script>
+      document.title = window.location.hostname;
+    </script>
   </head>
   <body class="bg-background">
     <div id="root"></div>
